infrastructure/cnpg/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-operator-egress-to-db
  namespace: cnpg
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg 
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: acme-dns
      podSelector:
        matchLabels:
          # Selects all CNPG instances
          cnpg.io/podRole: instance 
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 8000
